Fix footer wrapping behaviour and bring back attributions once collapsed

--- a/style.css
+++ b/style.css
@@ -92,6 +92,10 @@ section {
     section {
         margin: 5px 5px;
     }
+
+    h2 {
+        text-align: center !important;
+    }
 }
 
 /* ------------------------ Navigation Bar ----------------------- */
@@ -162,11 +166,12 @@ label {
 footer {
     margin-top: 100px;
     width: 100vw;
-    height: 150px;
+    min-height: 150px;
     background-color: #303036;
     position: relative;
 
     display: flex;
+    flex: 0 auto;
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
@@ -195,9 +200,6 @@ svg.svg {
 }
 
 @media only screen and (max-width: 1024px) {
-    .attributions {
-        display: none;
-    }
     footer {
         justify-content: center;
     }
@@ -285,13 +287,10 @@ section.projects img {
     margin: 20px;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 1024px) {
     section.projects img {
         max-width: 100%;
         margin: 5px;
-    }
-    section.projects h2 {
-        margin-left: 0px;
     }
     section.projects a {
         margin-right: 0px;
@@ -311,11 +310,8 @@ section.blog a {
 
 @media only screen and (max-width: 480px) {
     section.blog img {
-        max-width: 100%;
-        margin: 5px;
-    }
-    section.blog h2 {
-        margin-left: 0px;
+        width: calc(100vw - 10px);
+        margin: 20px 5px 0px 5px;
     }
     section.blog a {
         margin-right: 0px;
